# nix-router

./: .gitignore  README.md  agent.md  build.sh  burn.sh  flake.nix  general_config.toml  generate_snat_config.py  hardware-configuration.nix  result  router.nix  snat-config.nix  ssh-config.nix
webui/: README.md  backend.py  configuration.nix  module.nix  pyproject.toml
webui/static/: app.js  index.html  style.css
webui/tests/: test_backend.py
