[project]
name = "nix-router-webui"
version = "0.2.0"
description = "FastAPI backend for the NixOS router dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
